--- a/siteblog/siteblog_app/templates/siteblog_app/popular_posts_tpl.html
+++ b/siteblog/siteblog_app/templates/siteblog_app/popular_posts_tpl.html
@@ -1,9 +1,9 @@
 <!-- Виджет последних статей -->
 <div class="widget recent-posts-widget">
-    <h3>Рекомендуемые статьи</h3>
-    <ul>
+    <h3>Популярные статьи</h3>
+    <ol>
         {% for post in posts %}
             <li><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
         {% endfor %}
-    </ul>
+    </ol>
 </div>
