display tags cloud added

--- a/siteblog/templates/base.html
+++ b/siteblog/templates/base.html
@@ -55,17 +55,8 @@
             {% get_popular_posts 3 %}
 			
 			<!-- Виджет "Теги" -->
-            <div class="widget tags-widget">
-                <h3>Теги</h3>
-                <div class="tags-list">
-                    <a href="#" class="tag">Тег 1</a>
-                    <a href="#" class="tag">Тег 2</a>
-                    <a href="#" class="tag">Тег 3</a>
-                    <a href="#" class="tag">Тег 4</a>
-                    <a href="#" class="tag">Тег 5</a>
-                    <a href="#" class="tag">Тег 6</a>
-                </div>
-            </div>
+            {% get_tags %}
+
         </aside>
     </main>
 
